# OmniScript

./: .gitignore  LICENSE  README.md  global.conf.example  install.sh  omniscript.sh  pyproject.toml
.github/workflows/: ci.yml
adapters/: baremetal.sh  base.sh  docker.sh  lxc.sh  podman.sh
apps/nginx/: manifest.sh
apps/postgres/: manifest.sh
apps/traefik/: manifest.sh
config/: default.conf
lib/: config.sh  core.sh  logger.sh  security.sh  ui.sh
lib/core/: distro.sh  performance.sh  remote.sh  targets.sh  ui.sh  utils.sh
lib/features/: autotag.sh  backup.sh  hardening.sh  search.sh  security.sh  update.sh
lib/menus/: builder.sh  main.sh  settings.sh
lib/targets/: baremetal.sh  docker.sh  k8s.sh  lxc.sh  podman.sh
modules/: backup.sh  builder.sh  search.sh  sysinfo.sh  updater.sh
modules/cloud/: nextcloud.sh
modules/databases/: postgresql.sh  redis.sh
modules/devtools/: nodejs.sh
modules/monitoring/: grafana.sh  netdata.sh  portainer.sh  uptime-kuma.sh
modules/webservers/: caddy.sh  nginx-proxy-manager.sh  nginx.sh  traefik.sh
pkg/: apk.sh  apt.sh  dnf.sh  pacman.sh  zypper.sh
tests/core/: distro.bats  utils.bats
tests/features/: security.bats
tools/: __init__.py  compose_generator.py  module_validator.py  patch_k8s_targets.py  registry_search.py  requirements.txt
