[project]
name = "omniscript-tools"
version = "1.0.0"
description = "OmniScript Python Helper Tools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "OmniScript Contributors"}
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docker = [
    "docker>=6.0.0",
]
rich = [
    "rich>=13.0.0",
]

[project.scripts]
os-search = "tools.registry_search:main"
os-compose = "tools.compose_generator:main"
os-validate = "tools.module_validator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["tools"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # assert usage (ok in tests)
    "S310",    # URL open audit (we validate URLs)
    "S603",    # subprocess call (needed for validation)
    "S607",    # partial path (shellcheck is common)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches (complex main functions)
    "PLR0915", # too many statements
    "PLR2004", # magic values
    "PLC0415", # import not at top (conditional imports ok)
    "PTH123",  # Path.open preference (both are valid)
    "PTH101",  # Path.chmod preference
    "RUF012",  # ClassVar mutable class attrs
    "SIM102",  # nested if (sometimes clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tools"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
